--- a/package.json
+++ b/package.json
@@ -13,33 +13,39 @@
     "migrate": "tsx src/database/migrations.ts",
     "seed": "tsx src/database/seeds.ts"
   },
-  "keywords": ["renovation", "api", "node", "typescript"],
+  "keywords": [
+    "renovation",
+    "api",
+    "node",
+    "typescript"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@anthropic-ai/sdk": "^0.32.0",
+    "@supabase/supabase-js": "^2.81.1",
+    "aws-sdk": "^2.1500.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.2",
-    "@anthropic-ai/sdk": "^0.32.0",
-    "multer": "^1.4.5-lts.1",
-    "aws-sdk": "^2.1500.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.10.6",
     "@types/pg": "^8.10.9",
-    "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.12",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/bcrypt": "^5.0.2",
-    "typescript": "^5.3.3",
+    "eslint": "^8.56.0",
     "tsx": "^4.7.0",
-    "vitest": "^1.0.4",
-    "eslint": "^8.56.0"
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.4"
   },
   "engines": {
     "node": ">=18.0.0"
